Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
         </div>
       </div>
     </div>
-  
+    <script>
+      const input = document.querySelector('input');
+ 
+      input.addEventListener('keydown', function(e) {
+          console.log(e.key);
+      });
+      
+    </script>
   </body>
 </html>
