--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
           console.log(e.key);
       });
       
+      const input = document.querySelector('input')
+ 
+      input.addEventListener('keydown', function(e) {
+        if (e.key === "g") {
+          return e.preventDefault()
+        } else {
+          console.log(e.key)
+        }
+      });
     </script>
   </body>
 </html>
