--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       const input = document.querySelector('input')
  
       input.addEventListener('keydown', function(e) {
-        if (e.key === "g") {
+        if (e.key === "g", "o", "f") {
           return e.preventDefault()
         } else {
           console.log(e.key)
