--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
       const input = document.querySelector('input')
  
       input.addEventListener('keydown', function(e) {
-        if (e.key === "g", "o", "f") {
+        if (e.key === "g") {
           return e.preventDefault()
-        } else {
+        } if (e.key === "f") {
+          return e.preventDefault()
+        }if (e.key === "a") {
+          return e.preventDefault()
+        }else {
           console.log(e.key)
         }
       });
