--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
       input.addEventListener('keydown', function(e) {
         if (e.key === "g") {
           return e.preventDefault()
-        } if (e.key === "f") {
+        }else if (e.key === "f") {
           return e.preventDefault()
-        }if (e.key === "a") {
+        }else if (e.key === "a") {
           return e.preventDefault()
         }else {
           console.log(e.key)
