Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
       </div>
     </div>
     <script>
-      const input = document.querySelector('input');
+      /* const input = document.querySelector('input');
  
       input.addEventListener('keydown', function(e) {
           console.log(e.key);
-      });
+      });*/ 
       
       const input = document.querySelector('input')
  
