--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       const input = document.querySelector('input')
  
       input.addEventListener('keydown', function(e) {
-        if (e.key === "g", "h") {
+        if (e.key === "g") {
           return e.preventDefault()
         }else {
           console.log(e.key)
