Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
           console.log(e.key)
         }
       });
+      
+      const main = document.getElementById('main');
+ 
+      main.addEventListener('click', function(event) {
+        alert('I was clicked!');
+      });
     </script>
   </body>
 </html>
