Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       const main = document.getElementById('main');
  
       main.addEventListener('click', function(event) {
+        document.getElementById('main').style.backgroundColor = "green";
         alert('I was clicked!');
       });
     </script>
