Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
  
       main.addEventListener('click', function(event) {
         document.getElementById('main').style.backgroundColor = "green";
-        alert('I was clicked!');
+        document.getElementById('main').style.Color = "yellow";
+        
       });
     </script>
   </body>
