Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
  
       main.addEventListener('click', function(event) {
         document.getElementById('main').style.backgroundColor = "green";
-        document.getElementById('main').style.Color = "yellow";
+        document.getElementById('main').style.color = "yellow";
         
       });
     </script>
